--- a/html/Tableau.html
+++ b/html/Tableau.html
@@ -11,10 +11,10 @@
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
                 <div class="topnav">
                     <a class="active" href="../index.html">Home</a>
-                    <a href="about me.html">About Me</a>
+                    <a href="About me.html">About Me</a>
                     <a href="Why Social Work.html">Why Social Work?</a>
-                    <a href="resume.html">Resume</a>
-                    <a href="tableau.html">Tableau</a>
+                    <a href="Resume.html">Resume</a>
+                    <a href="Tableau.html">Tableau</a>
                   </div>
         </nav>
         <head>
